Remove json4s